frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: expense
  # labels of deployment resource
  labels:
    app: frontend
    tier: web
    project: expense
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      tier: web
      project: expense
  template:
    metadata:
      labels:
        app: frontend
        tier: web
        project: expense
    spec:
      containers:
      - name: nginx
        image: yamuna151/frontend:1.2.0
        ports:
        - containerPort: 8080
